FIND_PACKAGE(ROOT REQUIRED COMPONENTS ROOTVecOps)
INCLUDE(${ROOT_USE_FILE})

FIND_PACKAGE(Pythia8)

ADD_LIBRARY(rpy)
TARGET_SOURCES(rpy PRIVATE RPythiaSource.cpp)
TARGET_LINK_LIBRARIES(rpy ${ROOT_LIBRARIES} ${PYTHIA8_LIBRARIES})

ADD_EXECUTABLE(pythianator)
TARGET_SOURCES(pythianator PRIVATE main.cpp)
TARGET_LINK_LIBRARIES(pythianator rpy ${ROOT_LIBRARIES})

